# azure-opencode-setup

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  checksums.txt  coverage.json  pyproject.toml  quota-eastus.json  session-ses_3722.md  support-services.json
.github/: SDL_AUDIT_REPORT.md  SDL_ENFORCER_PROMPT.md
.github/workflows/: integration-smoke.yml  refresh-models-snapshot.yml  validate.yml
references/: confidential-vm-quota.md  config-template.md  contracts.md  discovery-scripts.md  models.dev.azure.json  quota-validation.md  troubleshooting.md  verify-endpoint.md
scripts/: __init__.py  check_cov.py  e2e-opencode-live.sh  emit-opencode-azure-cogsvc-config.ps1  emit-opencode-azure-cogsvc-config.sh  test-invariants.sh
src/azure_opencode_setup/: __init__.py  cli.py  config.py  discover.py  discovery.py  errors.py  io.py  locking.py  merge.py  paths.py  types.py  verify.py  whitelist.py
tests/: __init__.py  test_cli.py  test_config.py  test_discovery.py  test_io.py  test_live_azure_e2e.py  test_locking.py  test_merge.py  test_paths.py  test_types_and_errors.py
