[project]
name = "azure-opencode-setup"
version = "0.1.2"
description = "Automated Azure AI provider configuration for OpenCode"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
azure-opencode-setup = "azure_opencode_setup.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_opencode_setup"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
target-version = "py310"
