[project]
name = "azure-opencode-setup"
version = "0.1.2"
description = "Automated Azure AI provider configuration for OpenCode"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "portalocker>=3.2.0",
]

[project.scripts]
azure-opencode-setup = "azure_opencode_setup.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "pydoclint>=0.6.0",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "pyright>=1.1.408",
    "pip-audit>=2.10.0",
    "bandit>=1.9.3",
    "detect-secrets>=1.5.0",
    "build>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_opencode_setup"]

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests", "src/azure_opencode_setup"]
pythonpath = ["src"]
strict = true
xfail_strict = true
filterwarnings = [
    "error",
    # Relax if a specific dep starts emitting warnings:
    # "default::DeprecationWarning:httpx.*",
]
doctest_optionflags = [
    "ELLIPSIS",
    "NORMALIZE_WHITESPACE",
]
addopts = [
    "-q",
    "--no-header",
    "--doctest-modules",
    "--no-cov-on-fail",
    "--cov=azure_opencode_setup",
    "--cov-config=pyproject.toml",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json:coverage.json",
    "--cov-fail-under=95",
]

# ---------- coverage.py ----------
[tool.coverage.run]
source = ["azure_opencode_setup"]
branch = true
parallel = false
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 95
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == \"__main__\":",
]

# ---------- ruff ----------
[tool.ruff]
src = ["src"]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
unfixable = ["F841"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["azure_opencode_setup"]
force-single-line = true

[tool.ruff.lint.mccabe]
max-complexity = 7

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

# ---------- mypy ----------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_untyped_defs = true

# ---------- pyright ----------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"

# ---------- bandit ----------
[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pydoclint]
style = "google"
exclude = "\\.venv|\\.git|build|dist"
allow-init-docstring = true
arg-type-hints-in-docstring = true
check-arg-order = true
check-return-types = true
check-yield-types = true
skip-checking-short-docstrings = false
skip-checking-raises = false
require-return-section-when-returning-nothing = true
check-style-mismatch = true
check-arg-defaults = true
